--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,15 @@
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>group-id</groupId>
+            <artifactId>artifact-id</artifactId>
+            <version>version</version>
+        </dependency>
+        <!-- Add other dependencies here -->
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
@@ -22,7 +31,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>SnakeGame</mainClass>
+                            <mainClass>SnakeGameMain</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
