--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
             <artifactId>artifact-id</artifactId>
             <version>version</version>
         </dependency>
+             <dependency>
+    <groupId>org.apache.maven</groupId>
+    <artifactId>maven-artifact</artifactId>
+    <version>3.9.3</version>
+</dependency>
         <!-- Add other dependencies here -->
     </dependencies>
     <repositories>
